syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/duc-cnzj/mars/pkg/auth;auth";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int64 expires_in = 2;
}

message InfoResponse {
  int64 id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string logout_url = 5;
}

message SettingsResponse {
  bool sso_enabled = 1;
  string url = 2;
  string end_session_endpoint = 3;
}

message ExchangeRequest {
  string code = 1;
}

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/login",
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {} // Disable security key
    };
  }

  rpc Info(google.protobuf.Empty) returns (InfoResponse) {
    option (google.api.http) = {
      get: "/api/auth/info"
    };
  }

  rpc Settings(google.protobuf.Empty) returns (SettingsResponse) {
    option (google.api.http) = {
      get: "/api/auth/settings"
    };
  }

  rpc Exchange(ExchangeRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/exchange",
      body: "*"
    };
  }
}
